<resources>
    <string name="app_name">TakeCare</string>
    <string name="action_settings">Settings</string>
    <string name="app.tab.title.birtdays">Birthdays</string>
    <string name="app.tab.title.alarms">Alarms</string>
    <string name="app.tab.title.sayhello">Said hello</string>
    <string name="app.tab.title.recordings">Recordings</string>
    <string name="app.tab.title.loves">Loves</string>
    <string name="app.tab.title.todos">Todos</string>
    <string name="app.menu.search">Search</string>
    <string name="app.menu.about">About</string>

    <!-- Navigration drawer items-->
    <string name="app.drawer.enable.birthday.notification">Enable birthday</string>
    <string name="app.drawer.enable.sms.responder.notification">Enable sms responder</string>
    <string name="app.drawer.enable.call.responder.notification">Enable call responder</string>
    <string name="app.drawer.enable.toto.reminder">Activate todo reminder</string>
    <string name="app.drawer.enable.sayhello.sms.sender">Enable say hello</string>
    <string name="app.drawer.enable.speaker">Enable speaker</string>

    <!-- Birthday settings -->
    <string name="pref_header_birthday">Birthday</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!-- SMS settings -->
    <string name="pref_header_sms">SMS</string>
    <string name="settings_sms_enable_speaker">Enable sms speaker</string>
    <string name="settings_sms_enable_speaker_title">Speak when new sms</string>
    <string name="settings_sms_summary">Speak just a summary</string>
    <string name="settings_sms_summary_title">Speak the sms summary</string>
    <string name="settings_sms_summary_default_model">{name} you have a new message from {sname}</string>
    <string name="settings_sms_summary_model_title">Customize your summary</string>
    <string name="settings_sms_body">Read entire sms</string>
    <string name="settings_sms_body_title">Read sms body</string>
    <string name="settings_sms_body_default_model">
        {name} you have a new message from {sname} saying {message}</string>
    <string name="settings_sms_body_model_title">Customize sms body</string>

    <string name="settings_sms_enable_responder">respond incoming sms</string>
    <string name="settings_sms_enable_responder_title">reply sms</string>
    <string name="settings_sms_responder">{name} is busy!</string>
    <string name="settings_sms_responder_title">reply message</string>

    <!-- Settings for Call -->
    <string name="pref_header_call">CALL</string>
    <string name="settings_call_enable_speaker">Enable call speaker</string>
    <string name="settings_call_enable_speaker_title">Speak when new call</string>
    <string name="settings_call_summary_default_model">{name} you have a new call from {sname}</string>
    <string name="settings_call_summary_model_title">Customize your call summary</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="app_first_start_message">" Welcome, I am here to be your new assistant."</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Birthday settings -->
    <string name="pref_enable_birthday_notification">Enable birthday notification</string>
    <string name="pref_enable_birthday_description">You will receive notification on coming soon birthdays
    </string>
    <string name="pref_number_of_before_ntification">Number of days before notification</string>

    <!-- Contacts & Sync -->
    <string name="pref_header_contacts_sync">Contacts &amp; sync</string>
    <string name="pref_title_sync_frequency">Contacts sync frequency</string>
    <string name="birthday_notifone">Hello Hello do you known that you have birthdays of </string>
    <string name="birthday_notiftwo"> of your friends that is coming soon. please dont miss the occasion</string>
    <string name="title_activity_birthday_detail"></string>
    <string name="edit_birthday_text">edit birthday</string>
    <string name="birthday_notification_title">Look at your firends birthdays</string>
    <string name="birthday_notification_textOne">Hello Hello do you known that you have birthdays of</string>
    <string name="birthday_notification_textTwo">of your friends that is comming soon. please dont miss the occasion</string>
    <string name="days_text">days</string>
    <string name="action_notificator">Taking care</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_take_care_stuff">Taking care</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_first_sim_operator">just numbers from</string>
</resources>
