...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/fond05">
            <ImageView
                android:id="@+id/userImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
...
                android:text="Thomas Gasmyr Mougang"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileEmail"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileName"
                android:layout_weight="1"
                android:gravity="center"
...
