<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="5dp"
    android:orientation="horizontal">
    <!--<ImageView-->
        <!--android:id="@+id/nav_item_image"-->
        <!--android:layout_width="20dp"-->
        <!--android:layout_height="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:src="@drawable/job" />-->

    <TextView
        android:id="@+id/nav_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:gravity="left"
        android:text="Title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center" />
</LinearLayout>